[package]
name = "double-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
glob = "0.3.3"
miette = { version = "7.6.0", features = ["fancy"] }
notify = { version = "8.2.0", features = ["serde"] }
notify-debouncer-mini = { version = "0.7.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
